--- a/Web/Views/Credit/Index.cshtml
+++ b/Web/Views/Credit/Index.cshtml
@@ -2,77 +2,30 @@
 @{
     ViewBag.Title = "Kredi Kartı ile Ödeme";
 }
-
-
-@using (Html.BeginForm(new {@class="form-horizantal"}))
+@using (Html.BeginForm("Pay", "Credit", new { @id = ViewBag.project.Id }, FormMethod.Post, new { @class = "form-horizontal" }))
 {
-    <div class="control-group">
-        @Html.LabelFor(m => m.Holder, new { @class = "control-label" })
-        <div class="controls">
-            <div class="row-fluid">
-                @Html.TextBoxFor(m => m.Holder, new { @class = "form-control" })
-                @Html.ValidationMessageFor(m => m.Holder)
+    <fieldset>
+        <legend><h2>@ViewBag.Title</h2></legend>
+        <div class="row">
+            <h3 class="col-md-4"> Proje Adı:</h3>
+            <div class="controls">
+                <h3 class="col-md-8">
+                    @ViewBag.project.Title
+                </h3>
             </div>
         </div>
-    </div>
-    <div class="control-group">
-        @Html.LabelFor(m => m.Number1, new { @class = "control-label" })
-        <div class="controls">
-            <div class="row-fluid">
-                <div class="col-md-3">
-                    @Html.TextBoxFor(m => m.Number1, new { @class = "form-control" })
-                    @Html.ValidationMessageFor(m => m.Number1)
-                </div>
-                <div class="col-md-3">
-                    @Html.TextBoxFor(m => m.Number2, new { @class = "form-control" })
-                    @Html.ValidationMessageFor(m => m.Number2)
-                </div>
-                <div class="col-md-3">
-                    @Html.TextBoxFor(m => m.Number3, new { @class = "form-control" })
-                    @Html.ValidationMessageFor(m => m.Number3)
-                </div>
-                <div class="col-md-3">
-                    @Html.TextBoxFor(m => m.Number4, new { @class = "form-control" })
-                    @Html.ValidationMessageFor(m => m.Number4)
-                </div>
+        <div class="row">
+            <h3 class="col-md-4"> Ödeme Tutarı:</h3>
+            <div class="controls">
+                <h3 class="col-md-8">
+                    @ViewBag.project.Price TL
+                </h3>
             </div>
         </div>
-    </div>
-    <div class="row">
-        <div class="col-md-6">
-            <div class="control-group">
-                @Html.LabelFor(m => m.Month, new { @class = "control-label" })
-                <div class="controls">
-                    <div class="row-fluid">
-                        <div class="col-md-6">
-                            @Html.TextBoxFor(m => m.Month, new { @class = "form-control" })
-                            @Html.ValidationMessageFor(m => m.Month)
-                        </div>
-                        <div class="col-md-6">
-                            @Html.TextBoxFor(m => m.Year, new { @class = "form-control" })
-                            @Html.ValidationMessageFor(m => m.Year)
-                        </div>
-                    </div>
-                </div>
-            </div>
+        @Html.Partial("CardForm", Model)
+        <div class="form-actions">
+            <button type="submit" class="btn btn-primary">Ödeme yap</button>
+            @Html.ActionLink("Vazgeç", "Index", "Projects", null, new { @class = "btn  btn-danger" })
         </div>
-        <div class="col-md-6">
-            <div class="control-group">
-                @Html.LabelFor(m => m.CVC, new { @class = "control-label" })
-                <div class="controls">
-                    <div class="row-fluid">
-                        <div class="col-md-6">
-                            @Html.TextBoxFor(m => m.CVC, new { @class = "form-control" })
-                            @Html.ValidationMessageFor(m => m.CVC)
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <hr />
-    <div class="form-actions">
-        <button type="submit" class="btn btn-primary">Ödeme yap</button>
-        <button type="button" class="btn">Vazgeç</button>
-    </div>
+    </fieldset>
 }
