--- a/Web/Views/Shared/Header.cshtml
+++ b/Web/Views/Shared/Header.cshtml
@@ -9,7 +9,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            @Html.ActionLink("Emlak", "Index", "Ilanlar", new { area = "" }, new { @class = "navbar-brand" })
+            @Html.ActionLink("Blog", "Index", "Posts", new { area = "" }, new { @class = "navbar-brand" })
         </div>
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -18,8 +18,17 @@
                     @Html.ActionLink("Anasayfa", "Index", "Ilanlar")
                 </li>
                 <li>
-                    @Html.ActionLink("Kategoriler", "Index", "Kategoris")
+                    @Html.ActionLink("Projeler", "Index", "Projects")
                 </li>
+                @if (Web.Helpers.UserHelper.isMember() == true)
+                {
+                    <li>
+                        @Html.ActionLink("Ödemelerim", "List", "Credit")
+                    </li>
+                    <li>
+                        @Html.ActionLink("Sepetim", "Index", "Cart")
+                    </li>
+                }
                 <li>
                     @Html.ActionLink("İletişim", "Index", "Contact")
                 </li>
@@ -29,4 +38,3 @@
     </div>
     <!-- /.container -->
 </nav>
-<br />
